docs/versioned_docs/version-3.16.0-LTS/data-sources/firestore.md
---
id: firestore
title: Cloud Firestore
---

ToolJet can connect to **Cloud Firestore** databases to read and write data.

## Connection

To establish a connection with the **Cloud Firestore** data source, you can either click on the **+ Add new Data source** button located on the query panel or navigate to the **[Data Sources](/docs/data-sources/overview)** page from the ToolJet dashboard and choose Cloud Firestore as the data source.

ToolJet requires the following to connect to your BigQuery:

- **Private key**

For generating a private key check out **[Firestore's official documentation](https://cloud.google.com/iam/docs/creating-managing-service-account-keys#iam-service-account-keys-create-console)**.

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/connection-ux-fs.png"  alt="cloud firestore connection"/>

:::Info
**The Private key should look like this:**
```json
{
  "type": "service_account",
  "project_id": "datasource-206ec",
  "private_key_id": "e8d89d2b6d7f5996c74be4d10b39d881dbc1ed",
  "private_key": "-----BEGIN PRIVATE KEY-----\nMIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC1xW7ah6v8Qqqw\nDtWCHaZEA6O3naDD7nHVWUOJ4k8beT5xBqUUWprqzoRNUJxw6qKR49U2PsYNROdSg8nX7eDbwvvB9KFcb3N2bRxSM5UxRNkGqlMcHFS9YbDN1jelXI9I76NcVzDR8uJIibHFIxWySS4JJVkCt3i0y8of1PK/+i\nsKTuQGTb33mtaYXwQDOIc78SOyKM80pWo0SYyWoH1ZqGKUkzR4VMCx7uyf4\nluCbM3ZDEN9pZZOQgoTkkcpXt7Rg72G9FoFmvTNhAoGBAOC6s16g1f4h67pAiPvN\nN1tKIdb19+MTZyYptT/Du+hpJ5Y5sTu5Nv7GpdkLL0SG8T5XLZV+1RNT8MGV4GsA\nmSdsm4El39sdVqtTzYvEP+5ccSPWpcKYc5tpzVeJpdlK1OwkCShzD5pOLMBqvVlF\nX3DPmXj33a9RkDIa0UK5LuiH\n-----END PRIVATE KEY-----\n",
  "client_email": "firestore-adminsdk-n8ezk@datasource-206ec.iam.gserviceaccount.com",
  "client_id": "103063394008404340612",
  "auth_uri": "https://accounts.google.com/o/oauth2/auth",
  "token_uri": "https://oauth2.googleapis.com/token",
  "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-n8ezk%40datasource-206ec.iam.gserviceaccount.com"
}
```
:::

## Querying Firestore

1. Click on **+ Add** button of the query manager at the bottom panel of the editor.
2. Select the **Cloud Firestore** datasource added in previous step.
3. Select the desired operation from the dropdown and enter the required parameters.
4. Click on the **Preview** button to preview the output or Click on the **Run** button to trigger the query.

:::tip
Query results can be transformed using transformations. Read our transformations documentation to see how: **[link](/docs/app-builder/custom-code/transform-data)**
:::

## Supported Operations

- **[Get Document](#get-document)**
- **[Query collection](#query-collection)**
- **[Add Document to Collection](#add-document-to-collection)**
- **[Update Document](#update-document)**
- **[Set Document](#set-document)**
- **[Bulk update using document ID](#bulk-update-using-document-id)**
- **[Delete Document](#delete-document)**

### Get Document

Use this operation to get the data in a document.

#### Required Parameters

- **Path**

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-get-doc.png" alt="firestore get"/>

### Query Collection

Use this operation to query all the documents in a collection. Check firestore doc **[here](https://firebase.google.com/docs/reference/js/v8/firebase.database.Query)**.

#### Required Parameters

- **Path**

#### Optional parameters

- **Order**
- **Order type**
- **Limit**
- **Field**
- **Operator**
- **Value**

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-query-collection.png" alt="firestore collection" style={{marginBottom:'15px'}}/>

### Add Document to Collection

Use this operation for creating a new document in a collection.

#### Required Parameters

- **Collection**
- **Body**.

#### Example

```json
{
  "Author": "Shubh",
  "id": 5
}
```

<img style={{marginBottom:'15px' }} className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-add-doc.png" alt="firestore add document" />

### Update Document

Use this operation for updating the existing document in a collection. Also, it only updates fields if they exist, but doesn't replace an entire object like **[set operation](#set-document)**.

#### Required Parameters

- **Path**
- **Body**

#### Example

```json
{
  "Author": "Raj Deepak",
  "id": 3
}
```

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-update-doc.png" alt="firestore update" />

### Set Document

This operation replaces your chosen object with the value that you provide. So if your object has 5 fields, and you use Set operation and pass object with 3 fields, it will now have 3 fields.

#### Required Parameters

- **Path**
- **Body**

#### Example

```json
{
  "Author": "Meena",
  "id": 9
}
```

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-set-doc.png" alt="firestore set" />

### Bulk Update Using Document ID

Use this operation for bulk updating documents.

#### Required Parameters

- **Collection**
- **Key for document ID**
- **Records**

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-bulk-update.png" alt="firestore bulk" />

### Delete Document

Use this operation for deleting a document in a collection.

#### Required Parameters

- **Path**

<img className="screenshot-full img-full" src="/img/datasource-reference/firestore/cf-del-doc.png" alt="firestore delete"/>

## Transforming Firestore Query Result for Table Widget

The Firestore query result is in the form of object so we’ll need to transform it into array.

```js
return (data = Array(data));
```